tests/snapshots/run_wpt_conformance__onnx_max_float16_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "max.https.any.js",
    "max float16 3D tensors",
    "onnx",
    "PASS",
)
